# internal/server/notes.go
@@ -14,6 +14,14 @@ func (s *server) notesByUserID(c echo.Context) error {
 	return c.NoContent(http.StatusOK)
 }
 
+//	@Summary		Запрос на создание заметки
+//	@Description	Запрос на создание заметки с текстом для определенного пользователя
+//	@Param			request	body	model.CreateNoteRequest	true	"создать заметку:\nуказать айди пользователя,\nайди его личного / совместного пространства,\nтекст заметки,\nдата создания в часовом поясе пользователя в unix"
+//	@Success		201
+//	@Failure		400	{object}	map[string]string "Невалидный запрос"
+//	@Failure		500	{object}	map[string]string "Внутренняя ошибка"
+//	@Router			/notes/create [post]
+//
 // ручка для создания заметки
 func (s *server) createNote(c echo.Context) error {
 	var req model.CreateNoteRequest
